--- a/SustainableWasteManagementAPI/src/main/resources/application.properties
+++ b/SustainableWasteManagementAPI/src/main/resources/application.properties
@@ -1,13 +1,22 @@
 spring.application.name=SustainableWasteManagementAPI
+
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+
+# JPA and Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 Console Configuration
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JPA Configuration
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# SQL Initialization
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
