--- a/SustainableWasteManagementAPI/src/main/resources/application.properties
+++ b/SustainableWasteManagementAPI/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.h2.console.path=/h2-console
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
