--- a/SustainableWasteManagementAPI/src/main/resources/application.properties
+++ b/SustainableWasteManagementAPI/src/main/resources/application.properties
@@ -1,5 +1,23 @@
 spring.application.name=SustainableWasteManagementAPI
 
+# Spring Security
+spring.security.filter.order=5
+
+# Connection Pool Configuration
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+
+# Cache Configuration
+spring.cache.cache-names=wasteCategories,wasteCategory,recyclingTips,disposalGuidelines
+spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=600s
+
+# Logging
+logging.level.com.enviro.assessment.grad001.zannymaholobela=INFO
+logging.level.org.springframework.security=INFO
+
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
 spring.datasource.driverClassName=org.h2.Driver
