Changed firebase authentication to springboot security auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,13 @@ spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+spring.web.resources.static-locations=classpath:/META-INF/resources/
+
+# OpenAPI/Swagger configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.packages-to-scan=com.enviro.assessment.grad001.zannymaholobela.controller
+
+# Disable Firebase config warnings
+logging.level.com.google.cloud=ERROR
